# boolean-bestiary

./: .gitignore  README.md  environment.yml  pyproject.toml
boolean_bestiary/: __init__.py
boolean_bestiary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
boolean_bestiary/envs/: __init__.py  boolean_game.py
docs/: Makefile  conf.py  environment.rst  formulas.rst  index.rst
docs/_build/doctrees/: environment.doctree  environment.pickle  examples.doctree  formulas.doctree  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  environment.html  examples.html  formulas.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: examples.rst.txt  index.rst.txt
examples/: README.md  random_policy.py  train_iql.py
examples/algorithms/: __init__.py  iql.py
examples/assets/: README.md  iql_training_flow.mmd  iql_training_returns.csv
tests/: test_boolean_game.py
